[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/ui/frame_window.png" id="2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchor_left = 0.35
anchor_top = 0.3
anchor_right = 0.65
anchor_bottom = 0.7

[node name="StartButton" type="Button" parent="VBoxContainer"]
text = "Iniciar"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
text = "Carregar"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
text = "Sair"
